# ObjectForge

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  render.yaml
apps/api/: .env.example  Cargo.toml  Dockerfile
apps/api/api/: axum.rs
apps/api/src/: main.rs
apps/web/: middleware.ts  package.json  tailwind.config.ts  vercel.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/viewer/[sceneId]/: page.tsx
apps/web/components/: FloorplanPanel.tsx  HomeExperience.tsx  HotspotOverlay.tsx  ObjectHeroScene.tsx  ObjectViewer.tsx  PointCloudViewer.tsx  ProcessingStatus.tsx  RoomViewer.tsx  SceneInfoPanel.tsx  SplatGenerationAction.tsx  SplatViewer.tsx  VideoUpload.tsx  ViewerExperience.tsx
apps/web/lib/: api.ts  sceneTypes.ts
docs/: API.md  ARCHITECTURE.md  CODE_WALKTHROUGH.md  FRONTEND.md  LOCAL_SETUP.md  MODAL_PIPELINE.md  MODAL_SETUP.md  VERCEL_DEPLOY.md
modal/: .env.example  modal_app.py  requirements.txt  test_splat_conversion.py
shared/scene-schema/: scene-result.schema.json
